--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,6 @@
         <tbody>
             <tr>
                 <td>
-
-
                     <table border="0" cellpadding="0" cellspacing="0" style="margin:0; padding:0; width:100%;font-size:18px;line-height:4; font-family:Arial;text-decoration:none;color:#151515">
                         <thead>
                             <tr>
@@ -28,6 +26,13 @@
                                     <a href="#" alt='' target="_blank" style='text-decoration:none;color:#151515'>OUTLET</a></td>
                             </tr>
                         </thead>
+                    </table>
+                    <table border="0" cellpadding="0" cellspacing="0" style="margin:0; padding:0; width:100%">
+                        <tr>
+                            <td width='100%' height='1'>
+                                <hr>
+                            </td>
+                        </tr>
                     </table>
                     <table border="0" cellpadding="0" cellspacing="0" style="margin-top:35px; padding:0 0 0 30px; width:100%; font-family:Arial;font-size:22px">
                         <tr>
@@ -99,7 +104,7 @@
                             </td>
                         </tr>
                     </table>
-                    <table border="0" cellpadding="0" cellspacing="0" style="margin-top:40px; padding:45px 0 0 30px; width:100%; background-color:#f0f0f0;font-family:Arial;font-size:12px">
+                    <table border="0" cellpadding="0" cellspacing="0" style="margin-top:40px; padding:45px 0 0 30px; width:600px; background-color:#f0f0f0;font-family:Arial;font-size:12px">
                         <tr>
                             <td>
                                 <span style="border-right:1px solid #333333; padding-right:4px;">&#169; 2016</span><span style="padding-left:4px;">URBAN TEENS</span>
@@ -116,7 +121,7 @@
                         </tr>
 
                     </table>
-                    <table border="0" cellpadding="0" cellspacing="0" style="margin:0; padding-left:30px; width:100%; background-color:#f0f0f0;font-family:Arial; font-size:12px">
+                    <table border="0" cellpadding="0" cellspacing="0" style="margin:0; padding-left:30px; width:600px; background-color:#f0f0f0;font-family:Arial; font-size:12px">
                         <tbody style="width:300px; float:left">
                             <tr>
                                 <td><a href="#" alt="" style="color:#333333;padding:0 7px 0 0;line-height:8; border-right:1px solid #333333;">About Us</a></td>
